--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}assets/css/style.css">
   <link rel="alternate" type="application/rss+xml" title="My Blog" href="{{ site.baseurl }}rss.xml">
   <link rel="stylesheet" href="{{ site.baseurl }}assets/css/highlight.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/tictactoe.css">
 
   <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
@@ -22,6 +23,10 @@
   });
   </script>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="{{ site.baseurl }}assets/js/underscore.js"></script>
+  <script src="{{ site.baseurl }}assets/js/tictactoe.js"></script>
+  <script src="{{ site.baseurl }}assets/js/tictactoe_ui.js"></script>
   <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML" type="text/javascript"></script>
 </head>
 <body>
@@ -36,7 +41,6 @@
     {{ content }}
   </section>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="{{ site.baseurl }}assets/js/main.js"></script>
   <script src="{{ site.baseurl }}assets/js/highlight.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
